<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="AccountSafeViewModel"
            type="com.sandboxol.blockymods.view.fragment.accountsafe.AccountSafeViewModel"/>

        <import type="com.sandboxol.blockymods.entity.AccountCenter"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="10dp">

        <com.sandboxol.blockymods.view.widget.ItemView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:leftText="@string/item_view_change_password"
            app:onClickCommand="@{AccountSafeViewModel.onChangePasswordClickCommand}"
            app:rightTextHint="@string/item_view_click_modify"/>

        <com.sandboxol.blockymods.view.widget.ItemView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:leftText="@string/item_view_email"
            app:onClickCommand="@{AccountSafeViewModel.onEmailClickCommand}"
            app:rightText="@{AccountCenter.newInstance().email}"
            app:rightTextHint="@string/item_view_no_email"/>

        <com.sandboxol.blockymods.view.widget.ItemView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:border="false"
            app:leftText="@string/item_view_phone"
            app:onClickCommand="@{AccountSafeViewModel.onBindPhoneClickCommand}"
            app:rightText="@{AccountCenter.newInstance().telephone}"
            app:rightTextHint="@string/bind_phone_no_bind"/>

    </LinearLayout>

</layout>