<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="RegisterViewModel"
            type="com.sandboxol.blockymods.view.fragment.register.RegisterViewModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">

        <ImageView
            android:id="@+id/ivIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:src="@mipmap/ic_default"/>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/account_title"
            android:textColor="@color/titleText"
            android:textSize="@dimen/textSize15Sp"
            android:textStyle="bold"/>

        <EditText
            style="@style/AccountEditTextStyle"
            android:hint="@string/account_name"
            bind:afterTextChangedCommand="@{RegisterViewModel.onAccountCommand}"/>

        <EditText
            style="@style/PasswordEditTextStyle"
            android:hint="@string/account_password"
            bind:afterTextChangedCommand="@{RegisterViewModel.onPasswordCommand}"/>

        <EditText
            style="@style/PasswordEditTextStyle"
            android:hint="@string/account_retype_password"
            android:imeOptions="actionDone"
            bind:afterTextChangedCommand="@{RegisterViewModel.onConfirmPasswordCommand}"/>

        <Button
            style="@style/GreenButtonStyle"
            android:text="@string/account_register"
            bind:onClickCommand="@{RegisterViewModel.onRegisterCommand}"/>

        <TextView
            android:layout_width="264dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingRight="12dp"
            android:paddingTop="12dp"
            android:text="@string/account_has_account"
            android:textColor="@color/createAccountColor"
            android:textSize="13sp"
            bind:onClickCommand="@{RegisterViewModel.onLoginCommand}"/>


    </LinearLayout>

</layout>