<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:bind="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="@layout/activity_main">

    <data>

        <variable
            name="MainViewModel"
            type="com.sandboxol.blockymods.view.activity.main.MainViewModel"/>
    </data>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottomHeight"
        android:layout_gravity="bottom"
        android:background="@android:color/black"
        android:orientation="horizontal"
        bind:checkId="@{MainViewModel.checkId}"
        bind:onCheckCommand="@{MainViewModel.onCheckCommand}">

        <RadioButton
            android:id="@+id/rb_1"
            style="@style/MainItemStyle"
            android:drawableTop="@drawable/ic_game_selector"
            android:text="@string/main_game"/>

        <RadioButton
            android:id="@+id/rb_2"
            style="@style/MainItemStyle"
            android:drawableTop="@drawable/ic_dress_selector"
            android:text="@string/main_dress"
            android:visibility="visible"/>

        <RadioButton
            android:id="@+id/rb_3"
            style="@style/MainItemStyle"
            android:drawableTop="@drawable/ic_chat_selector"
            android:text="@string/main_chat"
            android:visibility="gone"/>

        <RadioButton
            android:id="@+id/rb_4"
            style="@style/MainItemStyle"
            android:drawableTop="@drawable/ic_more_selector"
            android:text="@string/main_more"/>

    </RadioGroup>


</layout>