<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="SettingViewModel"
            type="com.sandboxol.blockymods.view.fragment.setting.SettingViewModel"/>

        <import type="com.sandboxol.blockymods.entity.AccountCenter"/>

        <import type="android.view.View"/>
        <import type="com.sandboxol.blockymods.BuildConfig"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="10dp">

        <com.sandboxol.blockymods.view.widget.ItemView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="@{AccountCenter.newInstance().login ? View.VISIBLE : View.GONE}"
            bind:leftText="@string/item_view_account_safe"
            bind:onClickCommand="@{SettingViewModel.onAccountSafeClickCommand}"/>

        <com.sandboxol.blockymods.view.widget.ItemView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            bind:leftText="@string/item_view_reminder"
            bind:onClickCommand="@{SettingViewModel.onReminderClickCommand}"/>

        <com.sandboxol.blockymods.view.widget.ItemView
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="wrap_content"
            bind:leftText="@string/item_view_question"
            bind:onClickCommand="@{SettingViewModel.onQuestionClickCommand}"/>

        <com.sandboxol.blockymods.view.widget.ItemView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            bind:leftText="@string/item_view_check_version"
            bind:onClickCommand="@{SettingViewModel.onCheckVersionClickCommand}"
            bind:rightText="@{BuildConfig.VERSION_NAME}"/>

        <com.sandboxol.blockymods.view.widget.ItemView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            bind:border="false"
            bind:leftText="@string/item_view_about"
            bind:onClickCommand="@{SettingViewModel.onAboutClickCommand}"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|center_horizontal">

            <Button
                style="@style/GreenButtonStyle"
                android:layout_width="240dp"
                android:layout_height="44dp"
                android:layout_marginBottom="10dp"
                android:text="@string/account_exit_login"
                android:visibility="@{AccountCenter.newInstance().login ? View.VISIBLE : View.GONE}"
                bind:onClickCommand="@{SettingViewModel.onLogoutClickCommand}"/>

        </LinearLayout>

    </LinearLayout>

</layout>