<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="RegisterDetailViewModel"
            type="com.sandboxol.blockymods.view.fragment.registerdetail.RegisterDetailViewModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingTop="15sp">

        <LinearLayout
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="63dp"
            android:orientation="horizontal"
            android:paddingLeft="15dp">

            <ImageView
                android:id="@+id/ivIcon"
                android:layout_width="@dimen/headSizeDefault"
                android:layout_height="@dimen/headSizeDefault"
                android:src="@mipmap/ic_head_default"/>

            <Button
                android:layout_width="57dp"
                android:layout_height="24dp"
                android:layout_gravity="bottom"
                android:layout_marginLeft="10dp"
                android:background="@drawable/btn_green_selector"
                android:paddingBottom="3dp"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:paddingTop="0dp"
                bind:onClickCommand="@{RegisterDetailViewModel.onUploadCommand}"
                android:text="@string/account_upload_icon"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textSize12Sp"/>

        </LinearLayout>

        <EditText
            style="@style/NicknameEditTextStyle"
            android:hint="@string/account_enter_nick_name"
            bind:afterTextChangedCommand="@{RegisterDetailViewModel.onNickNameTextCommand}"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="76dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="left"
            android:text="@string/account_sex"
            android:textColor="@android:color/white"
            android:textSize="@dimen/textSize15Sp"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            bind:onCheckCommand="@{RegisterDetailViewModel.onCheckCommand}"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbMale"
                style="@style/AccountSexSelectStyle"
                android:layout_marginRight="10dp"
                android:text="@string/account_male"/>

            <RadioButton
                android:id="@+id/rbFemale"
                style="@style/AccountSexSelectStyle"
                android:text="@string/account_female"/>

        </RadioGroup>

        <Button
            style="@style/GreenButtonStyle"
            android:text="@string/account_done"
            android:enabled="@{!RegisterDetailViewModel.isLoading}"
            bind:onClickCommand="@{RegisterDetailViewModel.onFinishClickCommand}"/>

    </LinearLayout>

</layout>