<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="ForgetPasswordViewModel"
            type="com.sandboxol.blockymods.view.fragment.forgetpassword.ForgetPasswordViewModel"/>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/defaultMargin"
            android:layout_marginRight="@dimen/defaultMargin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/itemDefaultHeight"
                android:background="@color/itemDefaultColor"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="123dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/bind_phone_place_hint"
                    android:textColor="@color/itemTextDefaultColor"
                    android:textSize="@dimen/textSize14Sp"/>

                <View
                    android:layout_width="@dimen/borderLineHeight"
                    android:layout_height="match_parent"
                    android:background="@color/borderLineColor"/>

                <EditText
                    style="@style/ClearEditTextStyle"
                    android:hint="@string/bind_phone_phone_hint"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="11"
                    bind:afterTextChangedCommand="@{ForgetPasswordViewModel.onGetPhoneNumCommand}"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/itemDefaultHeight"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <EditText
                    style="@style/ClearEditTextStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:background="@color/itemDefaultColor"
                    android:hint="@string/bind_phone_code_hint"
                    android:maxLength="4"
                    bind:requestFocus="@{ForgetPasswordViewModel.editTextFocus}"
                    android:inputType="number"
                    bind:afterTextChangedCommand="@{ForgetPasswordViewModel.onGetVerifyCodeCommand}"/>

                <Button
                    android:layout_width="140dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/btn_green_selector"
                    android:text="@string/bind_phone_get_code_hint"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/textSize16Sp"
                    bind:onClickCommand="@{ForgetPasswordViewModel.onGetCodeCommand}"/>

            </LinearLayout>

            <com.sandboxol.blockymods.view.widget.XEditText
                style="@style/ClearEditTextStyle"
                android:layout_marginTop="10dp"
                android:hint="@string/change_password_new_hint"
                android:imeOptions="actionNext"
                android:paddingRight="10dp"
                bind:afterTextChangedCommand="@{ForgetPasswordViewModel.onGetNewPasswordCommand}"/>

            <com.sandboxol.blockymods.view.widget.XEditText
                style="@style/ClearEditTextStyle"
                android:hint="@string/change_password_reply_hint"
                android:imeOptions="actionDone"
                android:layout_marginTop="10dp"
                android:paddingRight="10dp"
                bind:afterTextChangedCommand="@{ForgetPasswordViewModel.onGetConfirmPasswordCommand}"/>


        </LinearLayout>

        <Button
            style="@style/GreenButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginLeft="@dimen/defaultMargin"
            android:layout_marginRight="@dimen/defaultMargin"
            android:layout_marginTop="20dp"
            android:text="@string/sure"
            bind:onClickCommand="@{ForgetPasswordViewModel.onVerificationCommand}"/>

    </LinearLayout>

</layout>